# Goa-uld-Translator-Mobile

./: .flet-ignore  BUILD_APK.md  Goa'uld-Dictionary.md  Goa'uld-Neologikum.md  LANGUAGE_GUIDE_DE.md  LANGUAGE_GUIDE_EN.md  MIGRATION_NOTES.md  README.md  app.py  build_apk.bat  build_log.txt  cleanup.ps1  fahrplan.md  gettree.ps1  goa'uld_translator.py  main.py  make_diagnostic.py  pyproject.toml  requirements.txt  tree.md  yaml_loader.py
.github/workflows/: build-apk.yml  test.yml
_backup_pre_fix/: __main__.py
app/: __init__.py  __main__.py  main.py  main.py.before_v2  main.py.original  theme.py
assets/: GOAULD_GRAMMAR.md  Goa'uld-Wörterbuch.md  Goa_uld-Fictionary.md  goa'uld_lexicon.yaml  goa_uld_lexicon.yaml  goauld_expansion_v1.yaml  goauld_expansion_v2.yaml  goauld_expansion_v3.yaml  goauld_expansion_v4.yaml  goauld_expansion_v5.yaml  goauld_expansion_v6.yaml  goauld_expansion_v7.yaml  goauld_overrides.yaml  goauld_root_registry.yaml
assets/android-licenses/: android-sdk-license
goauld_engine/: __init__.py  analyzer.py  lemma.py  lexicon.py  parser.py  resources.py  search.py  translator.py  yaml_loader.py
goauld_translator_mobile.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
plans/: current_status.md
tests/: __init__.py  test_engine.py  test_lemma.py  test_v7.py
